--- a/views/notes.jade
+++ b/views/notes.jade
@@ -3,7 +3,7 @@ extends layout
 block content
 	script(src='/javascripts/notes.js')
 	div.container(ng-app='appNotes' ng-controller='notesCtrl')
-		h3.header(ng-click='showAddNote=true') Add A Note 
+		h3.header(ng-click='showAddNote=true') 写一条儿 (Add A Note) 
 		form.form-horizontal(method="post", id="addNoteForm", action='/addNote' ng-show='showAddNote')
 			label About Who (谁)
 			select(name='aboutWho')
@@ -19,8 +19,11 @@ block content
 			input.span3(id="value", name="value")
 			| <br><br>
 			input.btn(type="submit", value="Save")
-		h3.header(ng-click='showAddNote=false') What Happened
+		h3.header(ng-click='showAddNote=false') 今儿有啥 (What Happened Today)
 		div(ng-show='!showAddNote')
-			h4 Data	
+			div(ng-repeat='note in notes')
+				p About {{note.about}}, {{note.keyword}}, {{note.details}}, Written By {{note.creator}}
+		h3.header 生活数字 (Life D)	
+
 		a.btn.btn-warning(href='/logout') Logout
 
