--- a/views/index.jade
+++ b/views/index.jade
@@ -1,14 +1,13 @@
 extends layout
 
-block content
+block content	
 	div.containe.text-center
-		img(src='images/home.jpg')  	
-		form.form-horizontal(method="post", id="loginForm", action='/auth')
-			div.form-control
-				label Username
-				input(id="username", type="text", name="username", placeholder="Enter your username")
-			div.form-control
-				label Password
-				input(id="password", type="password", name="password")
-			div.form-control
-				input.btn(type="submit", value="Log In")
+		div.wrapper
+			img(src='images/home.jpg')  	
+			div.login-form
+				form(method="post", id="loginForm", action='/auth')
+						label.form-control Username
+						input.form-control(id="username", type="text", name="username", placeholder="Enter your username")
+						label.form-control Password
+						input.form-control(id="password", type="password", name="password")
+						input.btn(id='btnLogin' type="submit", value="Log In")
