anuglar js calenda

--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -40,9 +40,10 @@ input{
 .login-form label{
 	text-align: left;
 	font-weight: bold;
+	border: none;
 }
 
-.login-form label, input{
+.login-form input{
 	width: 100%;
 	box-sizing : border-box;	
 }
