--- a/views/index.jade
+++ b/views/index.jade
@@ -3,12 +3,12 @@ extends layout
 block content	
 	div.containe.text-center
 		div.wrapper
-			img(src='images/home.jpg')  	
+			img.img-responsive(src='images/home.jpg')  	
 			div.login-form
 				form(method="post", id="loginForm", action='/auth')
-						label.form-control Username
+						label.form-control.login-form-label Username
 						input.form-control(id="username", type="text", name="username", placeholder="Enter your username")
-						label.form-control Password
+						label.form-control.login-form-label Password
 						input.form-control(id="password", type="password", name="password")
 						| <br>
-						input.btn(id='btnLogin' type="submit", value="Log In")
+						input.btn.login-form-btn(id='btnLogin' type="submit", value="Log In")
