--- a/views/notes.jade
+++ b/views/notes.jade
@@ -6,7 +6,7 @@ block content
 		h2.block Welcome To Life-D, 
 			h4.block #{loginUser} 
 		a.btn.btn-warning(href='/logout') Logout
-		h3.header(ng-click='showAddNote=true;showToday=false;showLifeD=false') 写一条儿 (Add A Note) 
+		h3.header(ng-click='showAddNote=true;showNoteCalendar=false;showLifeD=false') 写一条儿 (Add A Note) 
 		form.form-horizontal(method="post", id="addNoteForm", action='/addNote' ng-show='showAddNote')
 			label About Who (谁)
 			| <br>	
@@ -15,7 +15,10 @@ block content
 			| <br><br>	
 			label KeyWord (主题)
 			| <br>
-			input.form-control(id="keyword", ng-model="keyword" required)
+			input.form-control(id="keyword", ng-model="keyword" required ng-keyup='searchKeyword(keyword)')
+			div(ng-show='keywords.length')
+				ui
+					li.list-item(ng-repeat='x in keywords' ng-click='fetchKeyword(x)') {{x}}
 			| <br><br>
 			label Details (什么)
 			| <br>
@@ -26,11 +29,13 @@ block content
 			input.form-control(id="value", ng-model="value")
 			| <br><br>
 			input.btn(type="button", value="Save" ng-click='addNote()')
-		h3.header(ng-click='showAddNote=false;showToday=true;showLifeD=false') 今儿有啥 (About Today)
-		div(ng-show='showToday')
+		h3.header(ng-click='showAddNote=false;showNoteCalendar=true;showLifeD=false') 生活日历 (Notes Calendar)
+		div(ng-show='showNoteCalendar')
+			div(style="display:inline-block; min-height:290px;")
+				uib-datepicker(ng-model="selectedDate" min-date="minDate" show-weeks="true" class="well well-sm" custom-class="getDayClass(date, mode)")
 			div(ng-repeat='note in notes')
 				p {{note.about}}, {{note.keyword}}, {{note.details}}, Written By {{note.creator}}
-		h3.header(ng-click='showAddNote=false;showToday=false;showLifeD=true') 生活数字 (Life D)	
+		h3.header(ng-click='showAddNote=false;showNoteCalendar=false;showLifeD=true') 生活数字 (Life Data)	
 		div(ng-show='showLifeD')
 			label From
 			div
@@ -54,7 +59,7 @@ block content
 			| <br><br>	
 			label KeyWord (主题)
 			| <br>
-			input.form-control(id="keyword", ng-model="keyword_search" required)
+			input.form-control(id="keyword", ng-model="keyword_search" required ng-keyup='searchKeyword(keyword_search)')
 			| <br><br>
 			label Include (包含)
 			| <br>
