--- a/public/stylesheets/style.css
+++ b/public/stylesheets/style.css
@@ -66,3 +66,35 @@ input{
 	margin-top: 30px;
 	width: 100%;
 }
+
+.div-preview{
+	margin: 30px;
+	border: solid 1px;
+	display: inline-block;	
+}
+
+.div-preview img{
+	width: 100px;
+	height: 100px;
+}
+
+.boxclose{
+    float:right;
+/*    margin-top:-30px;
+*/    margin-right:-30px;
+    cursor:pointer;
+    color: #fff;
+    border: 1px solid #AEAEAE;
+    border-radius: 30px;
+    background: #605F61;
+    font-size: 31px;
+    font-weight: bold;
+    display: inline-block;
+    line-height: 0px;
+    padding: 11px 3px;       
+}
+
+.boxclose:before {
+    content: "×";
+}
+
